@@ -648,12 +648,6 @@ default_socket_timeout = 60
 ;phar.require_hash = On
 ;phar.cache_list =
 
-[Syslog]
-; Whether or not to define the various syslog variables (e.g. $LOG_PID,
-; $LOG_CRON, etc.).  Turning it off is a good idea performance-wise.  In
-; runtime, you can define these variables by calling define_syslog_variables().
-define_syslog_variables  = Off
-
 [mail function]
 ; For Win32 only.
 SMTP = localhost
